refactor: change profile data to env vars
