# pkg/api/docs/swagger.json
@@ -358,6 +358,81 @@
                 }
             }
         },
+        "/env": {
+            "get": {
+                "description": "List environment variables",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "envVar"
+                ],
+                "summary": "List environment variables",
+                "operationId": "ListEnvironmentVariables",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/EnvironmentVariable"
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Add environment variable",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "envVar"
+                ],
+                "summary": "Add environment variable",
+                "operationId": "AddEnvironmentVariable",
+                "parameters": [
+                    {
+                        "description": "Environment Variable",
+                        "name": "environmentVariable",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/EnvironmentVariable"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/env/{key}": {
+            "delete": {
+                "description": "Delete environment variable",
+                "tags": [
+                    "envVar"
+                ],
+                "summary": "Delete environment variable",
+                "operationId": "DeleteEnvironmentVariable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Environment Variable Key",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/gitprovider": {
             "get": {
                 "description": "List Git providers",
@@ -853,67 +928,6 @@
                                 "type": "string"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/profile": {
-            "get": {
-                "description": "Get profile data",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "profile"
-                ],
-                "summary": "Get profile data",
-                "operationId": "GetProfileData",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/ProfileData"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Set profile data",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "profile"
-                ],
-                "summary": "Set profile data",
-                "operationId": "SetProfileData",
-                "parameters": [
-                    {
-                        "description": "Profile data",
-                        "name": "profileData",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/ProfileData"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete profile data",
-                "tags": [
-                    "profile"
-                ],
-                "summary": "Delete profile data",
-                "operationId": "DeleteProfileData",
-                "responses": {
-                    "204": {
-                        "description": "No Content"
                     }
                 }
             }
@@ -2293,6 +2307,21 @@
                 }
             }
         },
+        "EnvironmentVariable": {
+            "type": "object",
+            "required": [
+                "key",
+                "value"
+            ],
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "FRPSConfig": {
             "type": "object",
             "required": [
@@ -2652,24 +2681,6 @@
                     }
                 },
                 "workspaceConfigName": {
-                    "type": "string"
-                }
-            }
-        },
-        "ProfileData": {
-            "type": "object",
-            "required": [
-                "envVars",
-                "id"
-            ],
-            "properties": {
-                "envVars": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "id": {
                     "type": "string"
                 }
             }
